<resources>
    <string name="app_name">GradeTracker</string>
    <string name="course_label">Courses</string>
    <string name="gpa_label">GPA: </string>
    <string name="hours_label">Hours: </string>

    <string name="grade_a_label">A</string>
    <string name="grade_b_label">B</string>
    <string name="grade_c_label">C</string>
    <string name="grade_d_label">D</string>
    <string name="grade_f_label">F</string>

    <string name="submit_label">Submit</string>
    <string name="cancel_label">Cancel</string>

    <string name="course_number_label">Course Number</string>
    <string name="course_name_label">Course Name</string>
    <string name="credit_hours_label">Credit Hours</string>

    <string name="course_grade_label">Course Grade</string>

    <string name="add_course_title">Add Course</string>
    <string name="update_course_title">Update Course</string>
    <string name="grades_title">Grades</string>

</resources>